# AdventOfCode2024

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Day_1/: CMakeLists.txt
Day_1/include/: resource_holder.h
Day_1/src/: app_main.cc  resource_holder.cc
Day_2/: CMakeLists.txt
Day_2/include/: resource_handler.h
Day_2/src/: app_main.cc  resource_handler.cc
Day_3/: CMakeLists.txt
Day_3/include/: instruction.h  resource_handler.h
Day_3/src/: instruction.cc  main_app.cc  resource_handler.cc
Day_4/: CMakeLists.txt
Day_4/include/: word_processor.h
Day_4/src/: main_app.cc  word_processor.cc
Day_4/src/resources/: test_input_two.txt
Day_5/: CMakeLists.txt
Day_5/include/: resource_handler.h
Day_5/src/: main_app.cc  resource_handler.cc
Day_6/: CMakeLists.txt
Day_6/include/: resource_handler.h
Day_6/src/: main_app.cc  resource_handler.cc
Day_7/: CMakeLists.txt
Day_7/include/: resource_handler.h
Day_7/src/: main_app.cc  resource_handler.cc
Day_7/src/resources/: calcs_go_wrong.txt
